--- a/src/stylesheets/Dashboard.css
+++ b/src/stylesheets/Dashboard.css
@@ -324,6 +324,8 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   gap: 16px;
+  margin-bottom: 24px;
+
 }
 
 @media (min-width: 768px) {
@@ -444,7 +446,6 @@ body {
 
 .tip:last-of-type {
   border-bottom: none;
-
 }
 
 .tip-title {
